--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "src/app.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js",
+    "test": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "Supriyo",
