--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,10 @@
     "start": "node src/app.js",
     "test": "nodemon src/app.js"
   },
-  "keywords": [],
+  "keywords": ["express", "mongodb", "url-shortener"],
   "author": "Supriyo",
-  "license": "GNU",
-  "description": "",
+  "license": "MIT",
+  "description": "Backend of URL Shortener project.",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
